refactor: validator 객체 삭제 및 도메인 내에서 검증하도록 변경